# node-sdk

./: .gitignore  .gitmodules  .npmrc  .prettierignore  404.html  CONTRIBUTING.md  README.md  codecov.yml  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  sitemap.xml  sonar-project.properties  tsconfig.build.json  tsconfig.cjs.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build-addon.yml  module-system-smoke.yml  precommit.yml  publish-docs.yml  quality-report.yml  regression.yml  release.yml  test-matrix.yml
api/: index.html
api-reference/: index.html
architecture/: index.html
docs/: api-reference.md  architecture.md  intro.md
native/aa-ffi-node/: Cargo.toml  index.cjs  index.d.ts
native/aa-ffi-node/src/: lib.rs
scripts/: postinstall.d.mts  postinstall.mjs  write-cjs-package-json.d.mts  write-cjs-package-json.mjs
src/: index.ts
tests/: adapter-registry.test.ts  blocked-at-shim.d.ts  gateway-client.test.ts  hooks-patch.test.ts  init-assembly.test.ts  langchain-callback-handler.test.ts  langchain-init-assembly.test.ts  langchain-pending-denial-cleanup.test.ts  langchain-runtime-integration.test.ts  langchain-tool-wrapper.test.ts  langgraph-hook.test.ts  mastra-hook.test.ts  native-client.test.ts  native-napi-integration.test.ts  openai-agents-hook.test.ts  topology-params.test.ts  topology-registration.test.ts  vercel-ai-hook.test.ts  with-assembly-governance.test.ts
website/: README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml
(+160 files in other folders)
